# cloudone-community

./: .cfnlintrc  .dccache  .gitignore  LICENSE  README.md  SECURITY.md  readme.md
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_integration_request.md  new_solution_request.md
.github/workflows/: codeql.yml  conformity-migration-ci.yml  conformity-migration-release.yml  group-mover-linter.yml  linter.yml  of-pr.yaml  on-pr.yaml  pipeline.yaml
Common/Cloud-Account/aws-cfn-cloud-account-connector/: README.md  cloudone.template.yaml  cloudtrail.template.yaml  get-cloudone-region-and-account.yaml  main.template.yaml  vision-one-enrollment.template.yaml  workloadsecurity.template.yaml
Common/Cloud-Account/aws-tf-cloud-account-connector/: LICENSE  README.md
Common/Cloud-Account/aws-tf-connectors-automation/: README.md  aws_connectors.tf  cloudtrail.tf  cloudtrail.yaml  connector_common.tf  connectors.tfvars  outputs.tf  provider.tf  variables.tf  ws_connector.tf
Common/Integration/aws-cdk-securityhub-integration/: package-lock.json  (+1 more)
Conformity/Migration/python-conformity-migration-tool/: .gitignore  LICENSE  MANIFEST.in  README.md  pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
Conformity/Migration/python-conformity-migration-tool/requirements/: dev.txt  test.txt
Conformity/Migration/python-conformity-migration-tool/src/conformity_migration/: conformity_api.py  models.py
Conformity/Migration/python-conformity-migration-tool/src/conformity_migration_tool/: __init__.py  aws_cli.py  cli.py  config.yml
Conformity/Migration/python-conformity-migration-tool/tests/conformity_migration/: test_todo.py
Conformity/custom-rule/: .gitignore  LICENSE  README.md  custom-rule.py  requirements.txt
Conformity/gcp-bash-automation-deployment-organization/: README.md  cc-roles.yaml  deployment-script.sh  remove-script.sh
Conformity/wellarchitected-sync/: README.md  wellarchitected-conformity-sync.yaml
File-Storage-Security/Scan-Trigger-Automation/: ReadMe.md
ReInforce-2022-jam/templates/: main.template.yaml
Workload-Security/Support/: ReadMe.md  ssm-iam-example-policy.json  ws-ssm-support-automation.yaml
Workload-Security/bash-group-mover/: README.md  group_mover.sh
(+218 files in other folders)
