[metadata]
name = conformity-migration-tool
version = 0.8.0
description = Migrates your visiblity information in cloudconformity.com to cloudone.trendmicro.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trendmicro/solutions-architect
project_urls =
    Source Code = https://github.com/trendmicro/solutions-architect
license = MIT
license_file = LICENSE
author = Ronald Bautista
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    conformity-migration = conformity_migration_tool.cli:cli
    conformity-migration-aws = conformity_migration_tool.aws_cli:cli

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E501
exclude =
    .git,
    __pycache__,
    .venv,
    old,
    build,
    dist

[mypy]
python_version = 3.7
allow_redefinition = True
disallow_subclassing_any = True
disallow_untyped_defs = False
check_untyped_defs = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = False

[mypy-importlib_metadata.*]
ignore_missing_imports = True

[mypy-PyInquirer.*]
ignore_missing_imports = True

[mypy-deepdiff.*]
ignore_missing_imports = True

[mypy-backoff.*]
ignore_missing_imports = True

[mypy-vcr.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-mypy_boto3_cloudformation.*]
ignore_missing_imports = True
